--- a/TourPlanner.UI/Views/TourLogsManagement.xaml
+++ b/TourPlanner.UI/Views/TourLogsManagement.xaml
@@ -10,7 +10,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Border CornerRadius="0,0,12,0">
-        <Grid Background="#A4B465">
+        <Grid Background="#4E5A38">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
