--- a/TourPlanner.UI/Views/CreateTourLog.xaml
+++ b/TourPlanner.UI/Views/CreateTourLog.xaml
@@ -29,9 +29,8 @@
                                FontSize="22"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontWeight="Bold"
-                               HorizontalAlignment="Left"
-                               VerticalAlignment="Center"
-                               Margin="50,5"/>
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"/>
                 </Border>
 
                 <!-- Date -->
@@ -42,7 +41,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Date"
-                               Foreground="Black"
+                               Foreground="White"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontSize="16"
                                Padding="5"
@@ -56,14 +55,18 @@
                 <TextBlock Text="{Binding DateError}" Foreground="Red" FontSize="12" Margin="20,0,0,2"/>
 
                 <!-- Comment -->
-                <StackPanel Grid.Row="2" Orientation="Vertical" Margin="6">
+                <Grid Grid.Row="2" Margin="10,0,10,10" HorizontalAlignment="Left">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
                     <TextBlock Text="Comment"
-                               Foreground="Black"
+                               Foreground="White"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontSize="16"
-                               VerticalAlignment="Top"
-                               Padding="5"/>
-                    <TextBox
+                               Padding="5"
+                               VerticalAlignment="Top"/>
+                    <TextBox Grid.Column="1"
                              Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                              Style="{StaticResource FormFieldTextBox}"
                              TextWrapping="Wrap"
@@ -73,12 +76,8 @@
                              Width="400"
                              HorizontalAlignment="Left"
                              VerticalScrollBarVisibility="Auto"/>
-                    <TextBlock
-                        Text="{Binding CommentError}"
-                        Foreground="Red"
-                        FontSize="12"
-                        Margin="5,0,0,0"/>
-                </StackPanel>
+                </Grid>
+                <TextBlock Text="{Binding CommentError}" Foreground="Red" FontSize="12" Margin="20,0,0,0"/>
 
                 <!-- Difficulty -->
                 <Grid Grid.Row="3" Margin="10">
@@ -88,7 +87,7 @@
                         <ColumnDefinition Width="50"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Difficulty"
-                               Foreground="Black"
+                               Foreground="White"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontSize="16"
                                Padding="5"
@@ -104,7 +103,7 @@
                             Style="{StaticResource FormSliderFieldStyle}"/>
                     <TextBlock Grid.Column="2"
                                Text="{Binding Difficulty, StringFormat=F0}"
-                               Foreground="Black"
+                               Foreground="White"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontSize="16"
                                Padding="5"
@@ -121,7 +120,7 @@
                         <ColumnDefinition Width="50"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Rating"
-                               Foreground="Black"
+                               Foreground="White"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontSize="16"
                                Padding="5"
@@ -138,7 +137,7 @@
                     <TextBlock Grid.Column="2"
                                Padding="5"
                                Text="{Binding Rating, StringFormat=F0}"
-                               Foreground="Black"
+                               Foreground="White"
                                FontFamily="/Resources/Fonts/#Montserrat"
                                FontSize="16"
                                VerticalAlignment="Center"
@@ -146,84 +145,88 @@
                 </Grid>
                 <TextBlock Text="{Binding RatingError}" Foreground="Red" FontSize="12" Margin="20,0,0,0"/>
 
+                <!-- Abstand zwischen Rating und Total Distance/Time -->
+                <Border Grid.Row="5" Height="18" Background="Transparent"/>
+
                 <!-- Total Distance and Total Time side by side -->
-                <StackPanel Grid.Row="5" Orientation="Horizontal" Margin="10">
+                <Grid Grid.Row="5" Margin="10,0,10,10" VerticalAlignment="Center">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
                     <!-- Total Distance -->
-                    <StackPanel Orientation="Vertical" Margin="0,0,40,0">
-                        <TextBlock Text="Total Distance"
-                                   Foreground="Black"
-                                   FontFamily="/Resources/Fonts/#Montserrat"
-                                   FontSize="16"
-                                   Padding="5"
-                                   VerticalAlignment="Center"/>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Text="{Binding TotalDistance, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                                     Style="{StaticResource FormFieldTextBox}"
-                                     VerticalAlignment="Center"
-                                     Width="100"
-                                     HorizontalAlignment="Left"/>
-                            <TextBlock
-                                Text="km"
-                                Foreground="Black"
-                                FontFamily="/Resources/Fonts/#Montserrat"
-                                FontSize="16"
-                                Padding="5"
-                                Margin="5,0,0,0"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Center"/>
-                        </StackPanel>
+                    <TextBlock Text="Total Distance"
+                               Foreground="White"
+                               FontFamily="/Resources/Fonts/#Montserrat"
+                               FontSize="16"
+                               Padding="5"
+                               VerticalAlignment="Center"
+                               Grid.Column="0"/>
+                    <StackPanel Orientation="Horizontal" Grid.Column="1" VerticalAlignment="Center">
+                        <TextBox Text="{Binding TotalDistance, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                                 Style="{StaticResource FormFieldTextBox}"
+                                 VerticalAlignment="Center"
+                                 Width="100"
+                                 HorizontalAlignment="Left"/>
                         <TextBlock
-                            Text="{Binding TotalDistanceError}"
-                            Foreground="Red"
-                            FontSize="12"
-                            Margin="5,0,0,0"/>
+                            Text="km"
+                            Foreground="White"
+                            FontFamily="/Resources/Fonts/#Montserrat"
+                            FontSize="16"
+                            Padding="5"
+                            Margin="5,0,0,0"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"/>
                     </StackPanel>
+                    <TextBlock Text="{Binding TotalDistanceError}" Foreground="Red" FontSize="12" Margin="5,0,0,0" Grid.Column="1" VerticalAlignment="Bottom"/>
+                    
+                    <Border Grid.Row="5" Height="18" Background="Transparent"/>
+
 
                     <!-- Total Time -->
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="Total Time"
-                                   Foreground="Black"
-                                   FontFamily="/Resources/Fonts/#Montserrat"
-                                   FontSize="16"
-                                   Padding="5"
-                                   VerticalAlignment="Center"/>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Text="{Binding Hours, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                                     Style="{StaticResource FormFieldTextBox}"
-                                     VerticalAlignment="Center"
-                                     Width="50"
-                                     HorizontalAlignment="Left"/>
-                            <TextBlock
-                                Text="h"
-                                Foreground="Black"
-                                FontFamily="/Resources/Fonts/#Montserrat"
-                                FontSize="16"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Center"
-                                Padding="5"
-                                Margin="2,0,10,0"/>
-                            <TextBox Text="{Binding Minutes, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                                     Style="{StaticResource FormFieldTextBox}"
-                                     Width="50"
-                                     VerticalAlignment="Center"
-                                     HorizontalAlignment="Left"/>
-                            <TextBlock
-                                Text="m"
-                                Foreground="Black"
-                                FontFamily="/Resources/Fonts/#Montserrat"
-                                FontSize="16"
-                                Padding="5"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Center"
-                                Margin="2,0"/>
-                        </StackPanel>
+                    <TextBlock Text="Total Time"
+                               Foreground="White"
+                               FontFamily="/Resources/Fonts/#Montserrat"
+                               FontSize="16"
+                               Padding="5"
+                               VerticalAlignment="Center"
+                               Grid.Column="3"/>
+                    <StackPanel Orientation="Horizontal" Grid.Column="4" VerticalAlignment="Center">
+                        <TextBox Text="{Binding Hours, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                                 Style="{StaticResource FormFieldTextBox}"
+                                 VerticalAlignment="Center"
+                                 Width="50"
+                                 HorizontalAlignment="Left"/>
                         <TextBlock
-                            Text="{Binding TotalTimeError}"
-                            Foreground="Red"
-                            FontSize="12"
+                            Text="h"
+                            Foreground="White"
+                            FontFamily="/Resources/Fonts/#Montserrat"
+                            FontSize="16"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Padding="5"
+                            Margin="5,0,0,0"/>
+                        <TextBox Text="{Binding Minutes, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                                 Style="{StaticResource FormFieldTextBox}"
+                                 Width="50"
+                                 VerticalAlignment="Center"
+                                 HorizontalAlignment="Left"/>
+                        <TextBlock
+                            Text="m"
+                            Foreground="White"
+                            FontFamily="/Resources/Fonts/#Montserrat"
+                            FontSize="16"
+                            Padding="5"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
                             Margin="5,0,0,0"/>
                     </StackPanel>
-                </StackPanel>
+                    <TextBlock Text="{Binding TotalTimeError}" Foreground="Red" FontSize="12" Margin="5,0,0,0" Grid.Column="4" VerticalAlignment="Bottom"/>
+                </Grid>
 
                 <!-- Buttons -->
                 <StackPanel Grid.Row="6"
