--- a/TourPlanner.UI/Resources/Themes/FormFieldTheme.xaml
+++ b/TourPlanner.UI/Resources/Themes/FormFieldTheme.xaml
@@ -37,7 +37,8 @@
                 <Setter Property="BorderThickness" Value="3"/>
                 <Setter Property="ToolTip"
                         Value="{Binding Path=(Validation.Errors)[0].ErrorContent,
-                                        RelativeSource={RelativeSource Self}}"/>
+                                        RelativeSource={RelativeSource Self},
+                                        FallbackValue=''}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -91,7 +92,8 @@
                 <Setter Property="Foreground" Value="#c44a4a" />
                 <Setter Property="ToolTip"
                         Value="{Binding Path=(Validation.Errors)[0].ErrorContent,
-                                        RelativeSource={RelativeSource Self}}" />
+                                        RelativeSource={RelativeSource Self},
+                                        FallbackValue=''}" />
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -112,7 +114,8 @@
                 <Setter Property="BorderThickness" Value="3" />
                 <Setter Property="ToolTip"
                         Value="{Binding Path=(Validation.Errors)[0].ErrorContent,
-                                        RelativeSource={RelativeSource Self}}" />
+                                        RelativeSource={RelativeSource Self},
+                                        FallbackValue=''}" />
             </Trigger>
         </Style.Triggers>
     </Style>
