--- a/TourPlanner.UI/Views/TourDetails.xaml
+++ b/TourPlanner.UI/Views/TourDetails.xaml
@@ -8,7 +8,7 @@
              xmlns:packIcon="http://materialdesigninxaml.net/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    
+
     <Border CornerRadius="0,0,12,0"
             BorderThickness="0,0,0,1"
             BorderBrush="#535e3c"
@@ -39,26 +39,26 @@
                                FontWeight="ExtraBold"
                                Foreground="#f28484"
                                Padding="12"/>
-                    
+
                     <StackPanel Grid.Column="1"
                                 Orientation="Horizontal"
                                 Margin="10">
-                        
+
                         <Button Content="{materialDesign:PackIcon Kind=Edit}"
                                 Style="{StaticResource ActionButtonStyle}"
                                 ToolTip="Edit Tour"
                                 Command="{Binding EditTourCommand}"/>
-                        
+
                         <Button Content="{materialDesign:PackIcon Kind=Export}"
                                 Style="{StaticResource ActionButtonStyle}"
                                 ToolTip="Export Tour"
                                 Command="{Binding ExportTourCommand}"/>
-                        
+
                         <Button Content="{materialDesign:PackIcon Kind=Delete}"
                                 Style="{StaticResource ActionButtonStyle}"
                                 ToolTip="Delete Tour"
                                 Command="{Binding DeleteTourCommand}"/>
-                        
+
                     </StackPanel>
                 </Grid>
 
@@ -92,7 +92,7 @@
                             <TextBlock Grid.Row="0" Grid.Column="0" Text="Date" Style="{StaticResource TextBlockDescriptorStyle}" Margin="16,0,8,0"/>
                             <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Date}" Style="{StaticResource TextBlockStyle}" Margin="0"/>
                             <TextBlock Grid.Row="1" Grid.Column="0" Text="Description" Style="{StaticResource TextBlockDescriptorStyle}" Margin="16,0,8,0"/>
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Description}" Style="{StaticResource TextBlockStyle}" Margin="0"/>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Description}" Style="{StaticResource TextBlockStyle}" Margin="0" TextWrapping="Wrap"/>
                         </Grid>
                     </Border>
 
@@ -179,10 +179,10 @@
                     <!-- Left column -->
                     <TextBlock Grid.Row="0" Grid.Column="0" Text="From" Style="{StaticResource TextBlockDescriptorStyle}" Margin="0,0,8,0"/>
                     <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding From}" Style="{StaticResource TextBlockStyle}" Margin="0,0,16,0" TextWrapping="Wrap" MaxWidth="400"/>
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="To" Style="{StaticResource TextBlockDescriptorStyle}" Margin="0,0,8,0"/>
-                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding To}" Style="{StaticResource TextBlockStyle}" Margin="0,0,16,0" TextWrapping="Wrap" MaxWidth="400"/>
-                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Transportation" Style="{StaticResource TextBlockDescriptorStyle}" Margin="0,0,8,0"/>
-                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding TransportType}" Style="{StaticResource TextBlockStyle}" Margin="0,0,16,0"/>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="To" Style="{StaticResource TextBlockDescriptorStyle}" Margin="0,8,8,0"/>
+                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding To}" Style="{StaticResource TextBlockStyle}" Margin="0,8,16,0" TextWrapping="Wrap" MaxWidth="400"/>
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Transportation" Style="{StaticResource TextBlockDescriptorStyle}" Margin="0,8,8,0"/>
+                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding TransportType}" Style="{StaticResource TextBlockStyle}" Margin="0,8,16,0"/>
                     <!-- Right column -->
                     <TextBlock Grid.Row="0" Grid.Column="2" Text="Distance" Style="{StaticResource TextBlockDescriptorStyle}" Margin="0,0,8,0"/>
                     <TextBlock Grid.Row="0" Grid.Column="3" Text="{Binding Distance}" Style="{StaticResource TextBlockStyle}" Margin="0,0,0,0"/>
@@ -190,7 +190,7 @@
                     <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding EstimatedTime}" Style="{StaticResource TextBlockStyle}" Margin="0,0,0,0"/>
                 </Grid>
             </Border>
-            
+
         </Grid>
     </Border>
 </UserControl>
