--- a/TourPlanner.UI/Views/TourList.xaml
+++ b/TourPlanner.UI/Views/TourList.xaml
@@ -5,17 +5,23 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
-             Background="Transparent">
+             Background="Transparent"
+             BorderThickness="0"
+             BorderBrush="Transparent">
 
-    <Border CornerRadius="48,48,48,48"
+    <Border CornerRadius="0,0,48,48"
             BorderThickness="0"
+            BorderBrush="Transparent"
             Background="#f7b2b2"
             ClipToBounds="True">
         <Grid>
             <!-- List containing all Tours -->
             <ListView ItemsSource="{Binding Tours}"
                       SelectedItem="{Binding SelectedTour, Mode=TwoWay}" 
-                      Background="Transparent">
+                      Background="Transparent"
+                      BorderThickness="0"
+                      BorderBrush="Transparent"
+                      FocusVisualStyle="{x:Null}">
                 <ListView.Resources>
                     <Style TargetType="ScrollBar" BasedOn="{StaticResource ModernScrollBarStyle}" />
                 </ListView.Resources>
